@@ -1,6 +1,8 @@
 Version 0.4.0
 - Added Entity Framework Core features for value converters and model builders.
 - ISO 3166: Breaking change; Iso3166AlphaMode moved from JSON package to main package.
+- ISO 639, 3166, 4217: Added ToModel method for retrieving the full model of an ISO 639 code.
+- ISO 639, 3166, 4217: Added TryTo[ISO] method for attempting to convert a string to its ISO code equivalent, without throwing an exception if it fails.
 
 
 Version 0.3.0
